test/zinc_source/compile_errors/structs/12_anon_to_named_assignment.zn
// expected-error: parameter 'point' expects a compatible 'Point' value

struct Point {
    x: i64
    y: i64
}

fn show(point: Point) {
    print(point.x)
}

fn main() {
    anon = struct {
        x: 1
        y: 2
    }
    show(anon)
}
